fix: corrected alignment of the Remove this file button

--- a/src/asset/pinnwand.scss
+++ b/src/asset/pinnwand.scss
@@ -153,7 +153,7 @@ section.paste-submit select {
     font-size: 1rem;
     color: var(--color2);
     border: .0625rem solid var(--color0);
-    padding: .25rem;
+    padding: .4rem;
 }
 
 section.file-part div.file-meta input {
@@ -161,7 +161,7 @@ section.file-part div.file-meta input {
     font-size: 1rem;
     color: var(--color2);
     border: .0625rem solid var(--color0);
-    padding: .25rem;
+    padding: .4rem;
 }
 
 section.file-part div.file-meta {
